test/2/bare-semicolon.err
parse error: test/2/bare-semicolon.ploy:1:1: unexpected terminator character: ';'
  ;
  ^
